Correction code de test pour compiler en java 8
git-svn-id: http://172.23.173.222/svn/MqttRestPegase/trunk@108 699b0288-00e2-4c9e-ae3d-540e2920c1ec